--- a/build_android/src/main/res/values-pt-rBr/strings.xml
+++ b/build_android/src/main/res/values-pt-rBr/strings.xml
@@ -27,11 +27,11 @@
 
 	<string name="menu_title_open">Menu</string>
 	<string name="menu_title_shut">Jogos</string>
-	<string name="menu_title_look">Search</string>
+	<string name="menu_title_look">Pesquisar</string>
 
-	<string name="file_list_recent">Recent</string>
+	<string name="file_list_recent">Recentes</string>
 	<string name="file_list_homebrew">Homebrew</string>
-	<string name="file_list_default">Unsorted</string>
+	<string name="file_list_default">Não listados</string>
 
 	<string name="game_unavailable">Jogo não disponivel.\nVocê gostaria de remove-lo dessa lista?</string>
 	<string name="not_found">Não encontrado</string>
@@ -58,7 +58,7 @@
 
 	<string name="pref_emu_video_gs_handler_title">GS Handler</string>
 
-	<string name="pref_emu_video_res_factor_title">Set Resolution Factor</string>
+	<string name="pref_emu_video_res_factor_title">Setar valor de resolução</string>
 
 	<string name="pref_emu_video_widescreen_title">Resize Output to Widescreen</string>
 	<string name="pref_emu_video_widescreen_summary">Resizes video to 16:9 ratio.</string>
@@ -68,14 +68,14 @@
 
 	<string name="pref_emu_video_presentation_mode_title">Presentation Mode</string>
 
-	<string name="pref_emu_audio">Audio Settings</string>
+	<string name="pref_emu_audio">Configurações de Áudio</string>
 
 	<string name="pref_emu_audio_enable_output_title">Enable Audio Output</string>
 	<string name="pref_emu_audio_enable_output_summary">Enables audio output.</string>
 
 	<string name="pref_emu_audio_spublockcount_title">Buffer Size</string>
 
-	<string name="preferences_screen_ui">UI Settings</string>
+	<string name="preferences_screen_ui">Configurações da UI</string>
 
 	<string name="preferences_ui">Storage Options</string>
 
@@ -85,15 +85,15 @@
 	<string name="pref_ui_clear_unavailable_title">Clear Unavailable Games</string>
 	<string name="pref_ui_clear_unavailable_summary">Remove any game currently inaccessible from the game list</string>
 
-	<string name="pref_ui_reset_cache_title">Reset Cache</string>
+	<string name="pref_ui_reset_cache_title">Resetar Cache</string>
 	<string name="pref_ui_reset_cache_summary">Clear stored cover images</string>
 
 	<string name="pref_ui_migrate_datafiles_title">Migrate Data Files</string>
 	<string name="pref_ui_migrate_datafiles_summary">Migrate Data Files from a folder on the device</string>
 
-	<string name="preferences_theme">Theme Settings</string>
+	<string name="preferences_theme">Configurações de tema</string>
 
-	<string name="pref_title_theme_selection">Theme Selection</string>
+	<string name="pref_title_theme_selection">Seletor de temas</string>
 
 	<string-array name="pref_theme_selection_titles">
 		<item>Amber</item>
@@ -131,7 +131,7 @@
 
 	<!-- Emulator Drawer -->
 
-	<string name="emulator_drawer_exit">Exit</string>
+	<string name="emulator_drawer_exit">Sair</string>
 	<string name="emulator_drawer_savestate">Save State</string>
 	<string name="emulator_drawer_loadstate">Load State</string>
 
@@ -153,18 +153,18 @@
 	<string name="no_recent_adapter">No recently played PS2 game found.</string>
 
 	<!-- Editor Menu -->
-	<string name="editor_menu_save">Save</string>
-	<string name="editor_menu_reset">Reset</string>
-	<string name="editor_menu_cancel">Cancel</string>
+	<string name="editor_menu_save">Salvar</string>
+	<string name="editor_menu_reset">Resetar</string>
+	<string name="editor_menu_cancel">Cancelar</string>
 
 	<!-- Game Info Edit Activity -->
 	<string name="gameinfo_edit_activity_gametitle">Game Title</string>
 	<string name="gameinfo_edit_activity_gameoverview">Game Overview</string>
 	<string name="gameinfo_edit_activity_gamecover">Game Cover</string>
 	<string name="gameinfo_edit_activity_gamecover_change">Change</string>
-	<string name="gameinfo_edit_activity_gamecover_default">Default</string>
+	<string name="gameinfo_edit_activity_gamecover_default">Padrão</string>
 
-	<string name="permission_dialog_title">Permission Request</string>
+	<string name="permission_dialog_title">Pedido de permissão</string>
 	<string name="permission_dialog_summary">Play! needs storage access (read/write). Without it, Play! won\'t be able to find your games or save your progress.</string>
 
 	<!-- Data Files Migration -->
